<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <!-- Description -->
    <TextView
        android:id="@+id/descriptionTextt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/watch"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleTextt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"/>

    <!-- Links -->
    <LinearLayout
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/crunchyrollLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/crunchy"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autoLink="none"/>

        <TextView
            android:id="@+id/netflixLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/netfilx"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autoLink="none"/>

        <TextView
            android:id="@+id/amazonPrimeLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/amazon"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autoLink="none"/>

        <TextView
            android:id="@+id/disneyPlusLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/disney"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autoLink="none"/>
    </LinearLayout>

    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/neon_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/links"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
